--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px 50px;
-  background-color: #000; /* Negro */
-  color: #fff; /* Blanco */
+  background-color: #000; 
+  color: #fff; 
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
 }
 
